--- a/src/sections/1-home-section/Home.scss
+++ b/src/sections/1-home-section/Home.scss
@@ -4,8 +4,6 @@
 .home-section{
   @include sectionLayout;
   &{
-    max-height: 100vh !important;
-    width: 100vw !important;
     box-sizing: border-box;
     overflow: visible;
     background-color: var(--background-color);
@@ -19,9 +17,10 @@
     contain: paint;
     box-sizing: border-box;
     height: 100%;
+    min-height: 100vh;
     overflow: visible;
 
-     .para {
+    .para {
       width: 100vw;
       grid-area: stack;
       animation: parallax linear;
@@ -30,29 +29,18 @@
     }
 
     .hero-wrapper{
-      #landing-hero-text,
-      #landing-sub-text{
-        display: flex;
-        justify-content: center;
-        font-size: clamp(18px, 6vw, 3rem);
-        font-weight: bold;
-        position: absolute;
-        top: 100px;
-        left: 0;
-        z-index: -1;
-        --para-speed: 35;
-        color: var(--hero-text-color);
-        animation: parallax linear;
-        animation-timeline: scroll();
-        z-index: -1 !important;
-      }
 
       #landing-sub-text{
+        display: flex;
+        font-weight: bold;
+        position: absolute;
         top: 100px;
         --para-speed: 35;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        z-index: -1;
+        left: 0;
 
         .subtext-span{
           color: #B2CC85;
@@ -68,18 +56,6 @@
           justify-content: center;
           --para-speed: 2;
         }
-      }
-
-      #landing-hero-text{
-        position: relative;
-
-        .header-span{
-          position: absolute;
-          left: 50%;
-          transform: translateX(-50%);
-        }
-
-
       }
     }
 
@@ -106,12 +82,7 @@
 
 @keyframes parallax {
   to {
-    transform: translateY(calc(var(--para-speed) * 230px));
-  }
-}
-@keyframes zoom-out {
-  to {
-    transform: scale(0);
+    transform: translateY(calc(var(--para-speed) * 200px));
   }
 }
 
